--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
                 </nav>
             </div>
         </header>
+        <main>
+            <div id="about">
+                <h2>About Me</h2>
+                <p>My name is Pau Lujan and I'm a software developer based in Barcelona, Spain. I started my journey with computers at an early age with my first netbook laptop on high school, before that I only had small experiences with my mother's computer and the one in my local public library. At the age of 16 I started a course of IT Technic from which I graduated in 2016. Then I started another degree on Software Development that I finished but didn't graduate because I got stuck in some subjects. There was a very difficult moment in my life and I had to take some decissions and start working due to covid and other problems. I always knew I would come back to this world whenever I had my life set up. It's now been 6 months since I retook my studies and with all the experience I got from the first time i decided to take a different approch. I'm currently studying a Frontend Engineer course on Codecademy, dedicating all my free time to become the best software developer that I can be. After this, I'm already planning on taking the Backend course aswell and master my skills on other projects and courses to become a Full Stack Developer.</p>
+            </div>
+        </main>
     </body>
 </html>
