--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Pau Lujan</title>
         <link href="styles.css" type="text/css" rel="stylesheet"/>
         <script src="script.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,900;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -22,7 +23,7 @@
         <main>
             <div id="about">
                 <h2>About Me</h2>
-                <p>My name is Pau Lujan and I'm a software developer based in Barcelona, Spain. I started my journey with computers at an early age with my first laptop on high school, before that I only had small experiences with my mother's computer and the one in my local public library. At the age of 16 I started a course of IT Technic which I graduated from in 2016. Then I started another degree on Software Development that I finished but didn't graduate because I got stuck with some subjects. In that time I went through very difficult times in my life and I had to take some decissions and start working full time due to covid. I always knew I would come back to this world whenever I had my life set up. It's now been 6 months since I retook my studies and with all the experience I got from the first time I decided to take a different approach. I'm currently studying a Frontend Engineer course on Codecademy, dedicating all my free time to become the best software developer that I can be. After this, I'm already planning on taking the Backend course aswell and master my skills on other projects and courses to become a Full Stack Developer.</p>
+                <p>My name is Pau Lujan and I'm a software developer based in Barcelona, Spain. I started my journey with computers at an early age with my first laptop on high school. At the age of 16 I enroled on a IT technic course which I graduated from in 2016. Then I started another degree about Software Development that I finished but I didn't graduate because I got stuck with some subjects. For 3 years I worked full time away from computers. I always knew I would come back to this world whenever I had my life set up. It's now been 6 months since I retook my studies and with all the experience I got from the first time I decided to take a different approach. I'm currently studying a Frontend Engineer course on Codecademy, dedicating all my free time to become the best software developer that I can be. After this, I'm already planning on taking the Backend course aswell and master my skills on other projects and courses to become a Full Stack Developer.</p>
             </div>
             <div id="formation">
                 <h2>Formation</h2>
@@ -30,6 +31,26 @@
                     <li>Frontend Engineer in Codecademy (2022)</li>
                     <li>Multiplatform Applications Development on Technical College (2017-2019)</li>
                     <li>Computer and Network Systems on Technical College (2014-2016)</li>
+                </ul>
+            </div>
+            <div id="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript</li>
+                    <li>C</li>
+                    <li>Java</li>
+                    <li>Git</li>
+                    <li>ReactJS</li>
+                </ul>
+            </div>
+            <div id="contact">
+                <h2>Contact Information</h2>
+                <ul>
+                    <li>LinkedIn</li>
+                    <li>GitHub</li>
+                    <li>Email</li>
                 </ul>
             </div>
         </main>
