Added new features

--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     </head>
     <body>
         <header>
-            <div id="content">
-                <h2>Pau Lujan</h2>
+                <h1 id="logo">Pau Lujan</h1>
                 <nav class="nav-bar">
                     <ul>
-                        <li>About Me</li>
-                        <li>Projects</li>
-                        <li>Formation</li>
-                        <li>Skills</li>
-                        <li>Contact</li>
+                        <li class="menu">About Me</li>
+                        <li class="menu">Projects</li>
+                        <li class="menu">Formation</li>
+                        <li class="menu">Skills</li>
+                        <li class="menu">Contact</li>
                     </ul>
                 </nav>
-            </div>
         </header>
         <main>
             <div id="about">
+                <img src="./media/ProfilePic.png" alt="Pau profile picture"/>
                 <h2>About Me</h2>
-                <p>My name is Pau Lujan and I'm a software developer based in Barcelona, Spain. I started my journey with computers at an early age with my first laptop on high school. At the age of 16 I enroled on a IT technic course which I graduated from in 2016. Then I started another degree about Software Development that I finished but I didn't graduate because I got stuck with some subjects. For 3 years I worked full time away from computers. I always knew I would come back to this world whenever I had my life set up. It's now been 6 months since I retook my studies and with all the experience I got from the first time I decided to take a different approach. I'm currently studying a Frontend Engineer course on Codecademy, dedicating all my free time to become the best software developer that I can be. After this, I'm already planning on taking the Backend course aswell and master my skills on other projects and courses to become a Full Stack Developer.</p>
+                <p>My name is Pau Lujan and I'm a software developer based in Barcelona, Spain. I started my journey with computers at an early age with my first laptop at high school. At the age of 16 I enroled on an IT Technic course which I graduated from in 2016. Then I started another degree about Software Development that I finished but I didn't graduate because I got stuck with some subjects. For 3 years I worked full time away from computers but I always knew I would come back to this path whenever I had my life set up. It's now been 6 months since I started back again my studies and with all the experience I got from the first time I decided to take a different approach. I'm currently studying a Frontend Engineer course on Codecademy, dedicating all my free time to become the best software developer that I can be. After this, I'm already planning on taking the Backend course aswell and master my skills on some personal projects and courses to become a Full Stack Developer.</p>
             </div>
             <div id="formation">
                 <h2>Formation</h2>
