--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
                 <h1 id="logo">Pau Lujan</h1>
                 <nav class="nav-bar">
                     <ul>
-                        <li class="menu">About Me</li>
-                        <li class="menu">Projects</li>
-                        <li class="menu">Formation</li>
-                        <li class="menu">Skills</li>
-                        <li class="menu">Contact</li>
+                        <li class="menu"><a href="#">About Me</a></li>
+                        <li class="menu"><a href="#">Projects</a></li>
+                        <li class="menu"><a href="#">Formation</a></li>
+                        <li class="menu"><a href="#">Skills</a></li>
+                        <li class="menu"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
         </header>
