--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
                 <h1 id="logo">Pau Lujan</h1>
                 <nav class="nav-bar">
                     <ul>
-                        <li class="menu"><a href="#">About Me</a></li>
-                        <li class="menu"><a href="#">Projects</a></li>
-                        <li class="menu"><a href="#">Formation</a></li>
+                        <li class="menu"><a href="#about">About Me</a></li>
+                        <li class="menu"><a href="#projects">Projects</a></li>
+                        <li class="menu"><a href="#training">Training</a></li>
                         <li class="menu"><a href="#">Skills</a></li>
                         <li class="menu"><a href="#">Contact</a></li>
                     </ul>
@@ -24,10 +24,25 @@
                 <h2>About Me</h2>
                 <p>My name is Pau Lujan and I'm a software developer based in Barcelona, Spain. I started my journey with computers at an early age with my first laptop at high school. At the age of 16 I enroled on an IT Technic course which I graduated from in 2016. Then I started another degree about Software Development that I finished but I didn't graduate because I got stuck with some subjects. For 3 years I worked full time away from computers but I always knew I would come back to this path whenever I had my life set up. It's now been 6 months since I started back again my studies and with all the experience I got from the first time I decided to take a different approach. I'm currently studying a Frontend Engineer course on Codecademy, dedicating all my free time to become the best software developer that I can be. After this, I'm already planning on taking the Backend course aswell and master my skills on some personal projects and courses to become a Full Stack Developer.</p>
             </div>
-            <div id="formation">
-                <h2>Formation</h2>
+            <div id="projects">
+                <h2>Projects</h2>
+                <div id="project">
+                    <a href="index.html"><img src="./media/portfolio_project.png" alt="Portfolio Website Project"/></a>
+                    <p>Portfolio website project</p>
+                </div>
+                <div id="project">
+                    <img src="./media/soon_project.jpeg" alt="Any project yet"/>
+                    <p>Soon...</p>
+                </div>
+                <div id="project">
+                    <img src="./media/soon_project.jpeg" alt="Any project yet"/>
+                    <p>Soon...</p>
+                </div>
+            </div>
+            <div id="training">
+                <h2>Training</h2>
                 <ul>
-                    <li>Frontend Engineer in Codecademy (2022)</li>
+                    <li>Frontend Engineer course in Codecademy (2022)</li>
                     <li>Multiplatform Applications Development on Technical College (2017-2019)</li>
                     <li>Computer and Network Systems on Technical College (2014-2016)</li>
                 </ul>
