--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <li class="menu"><a href="#about">About Me</a></li>
                         <li class="menu"><a href="#projects">Projects</a></li>
                         <li class="menu"><a href="#training">Training</a></li>
-                        <li class="menu"><a href="#">Skills</a></li>
+                        <li class="menu"><a href="#skills">Skills</a></li>
                         <li class="menu"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -49,6 +49,7 @@
             </div>
             <div id="skills">
                 <h2>Skills</h2>
+                <p>This is a list of all the programming languages, tools and frameworks I worked with and I am improving at the moment: </p>
                 <ul>
                     <li>HTML5</li>
                     <li>CSS3</li>
@@ -60,12 +61,15 @@
                 </ul>
             </div>
             <div id="contact">
-                <h2>Contact Information</h2>
-                <ul>
-                    <li>LinkedIn</li>
-                    <li>GitHub</li>
-                    <li>Email</li>
-                </ul>
+                <img src="./media/contact-bg.jpg" alt="Computer Background Stock Image"/>
+                <div id="contact-info">
+                    <ul>
+                        <li><h2>Contact Information</h2></li>
+                        <li>LinkedIn</li>
+                        <li>GitHub</li>
+                        <li>Email</li>
+                    </ul>
+                </div>
             </div>
         </main>
     </body>
